Mon Feb  5 17:00:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Always add GENERIC_READ access
	when opening raw disk devices.
	* fhandler_floppy.cc (fhandler_dev_floppy::lseek): Implement bytewise
	access.
	* fhandler_raw.cc (fhandler_dev_raw::open): Always open raw disk device
	binary.
	(fhandler_dev_raw::raw_write): Don't drop read buffer content when
	writing after read.

Mon Feb  5 13:30:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* mmap.cc (mmap_record::fixup_map): New method to duplicate
	the memory protection in a just forked child.
	(mmap): Realign gran_len to page boundary only on anonymous
	mapping before saving in the mmap_record.
	(munmap): Cleanup code.
	(msync): Ditto.
	(fixup_mmaps_after_fork): Ditto. Call mmap_record::fixup_map now.

Thu Feb  1 23:08:29 2001  Christopher Faylor <cgf@cygnus.com>

	* cygheap.cc (creturn): Correctly calculate cygheap_max.

Wed Jan 31 10:04:58 2001  Christopher Faylor <cgf@cygnus.com>

	* shared.cc (shared_info::initialize): Reduce size of heap.

Wed Jan 31 13:22:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* include/sys/resource.h: Fix typo.

Wed Jan 31 13:20:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* include/sys/resource.h: Add RLIMIT_NLIMITS and RLIM_NLIMITS.

Tue Jan 30 18:15:23 2001  Christopher Faylor <cgf@cygnus.com>

	* include/cygwin/version.h: Bump version to 1.3.0.

Tue Jan 30  8:55:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* pinfo.cc (pinfo::init): Use INVALID_HANDLE_VALUE instead of
	explicit cast (HANDLE) 0xffffffff.
	* shared.cc (open_shared): Ditto.

Mon Jan 29 17:15:22 2001  Bill Hegardt <bill@troyxcd.com>

	* fhandler_serial.cc (raw_write): Use local copy of OVERLAPPED
	structure instead of shared structure to fix a race condition between
	read/write.

Mon Jan 29 14:30:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* mmap.cc (mmap): Remove obsolete check for MAP_SHARED|MAP_ANON as
	being invalid.
