@@ -1,3 +1,8 @@
+Tue Feb  6 15:04:00 2001  Corinna Vinschen <corinna@vinschen.de>
+
+	* syscalls.cc (stat_worker): Add a check for the special case when
+	a process creates a file using mode 000 using ntsec.
+
 Mon Feb  5 17:00:00 2001  Corinna Vinschen <corinna@vinschen.de>
 
 	* fhandler.cc (fhandler_base::open): Always add GENERIC_READ access
